--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       </div>
       <div>
         <ul class="social-icons-ql">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/GmailKing"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/nitish-1610908/"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://www.instagram.com/nitish_sharma_sharma/"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://twitter.com/nitish_sharma_s"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
         </ul>
       </div>
@@ -526,13 +526,13 @@
       <h1 class="footer-heading">FOLLOW ME</h1>
       <div class="follow">
         <ul class="list-inline social">
-          <li><a target="_blank" href="#"><i class="fa fa-facebook facebook-color"></i></a>
+          <li><a target="_blank" href="https://www.facebook.com/GmailKing"><i class="fa fa-facebook facebook-color"></i></a>
           </li>
-          <li><a target="_blank" href="#"><i class="fa fa-twitter twitter-color"></i></a>
+          <li><a target="_blank" href="https://twitter.com/nitish_sharma_s"><i class="fa fa-twitter twitter-color"></i></a>
           </li>
-          <li><a target="_blank" href="#"><i class="fa fa-linkedin linkedin-color"></i></a>
+          <li><a target="_blank" href="https://www.linkedin.com/in/nitish-1610908/"><i class="fa fa-linkedin linkedin-color"></i></a>
           </li>
-          <li><a target="_blank" href="#"><i class="fa fa-instagram instagram-color"></i></a>
+          <li><a target="_blank" href="https://www.instagram.com/nitish_sharma_sharma/"><i class="fa fa-instagram instagram-color"></i></a>
           </li>
           <li><a target="_blank" href="#"><i class="fa fa-google google-color"></i></a>
           </li>
