--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <h2 class="cd-headline  clip is-full-width font-accident-two-light">
               <span>The Experienced </span>
               <span class="cd-words-wrapper" style="width: 9.51866px; overflow: hidden;">
-                <b class="is-hidden">Sonam Kumari Pagal</b>
+                <b class="is-hidden">Android Developer</b>
                 <b class="is-hidden">Web Designer</b>
-                <b class="is-visible">Photographer</b>
+                <b class="is-visible">Git</b>
               </span>
             </h2>
 
