--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
   <div class="container footer-background-img padding-zero">
 
 
-    <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
+    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
       <h1 class="footer-heading">CONTACT US</h1>
       <div class="follow">
         <h2>Email <i class="fa fa-chevron-down arrow-padding" aria-hidden="true"></i></h2>
@@ -502,9 +502,9 @@
 
 
       </div>
-    </div>
+    </div> -->
 
-    <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
+    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
       <h1 class="footer-heading">INTERESTS</h1>
       <div class="follow interest">
         <ul>
@@ -519,9 +519,9 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
-    <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
+    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
 
       <h1 class="footer-heading">FOLLOW ME</h1>
       <div class="follow">
@@ -538,7 +538,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- term -->
