--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <!-- Progress -->
 
-  <div class="container padding-zero" style="background: #86b0ee;">
+  <div class="container padding-zero" style="background: #3498db;">
     <div class="col-md-4 col-sm-12 col-xs-12 padding-zero">
       <div class="experience-card">
         <div class="experience-card-title">
@@ -246,33 +246,43 @@
           <div class="experience">
 
             <ul class="">
-              <li class="date">02/2008 - 04/2010</li>
+              <li class="date">Feb 2019 - present</li>
               <li class="company uppercase">
                 <a>
-                  ABC Brodcast Inc. New York.
+                  Plutonic Services Pvt. Ltd.
                 </a>
               </li>
-              <li class="position">Junior Designer</li>
+              <li class="position">Full Stack Developer</li>
             </ul>
 
             <ul class="">
-              <li class="date">04/2010 - 06/2012</li>
+              <li class="date">Jul 2018 - Jul 2018</li>
               <li class="company uppercase">
                 <a>
-                  Leo Burnett London Office
+                  MultiTech Arena
                 </a>
               </li>
-              <li class="position">Senior Designer</li>
+              <li class="position">Web Developer</li>
             </ul>
 
             <ul class="">
-              <li class="date">06/2012 - present</li>
+              <li class="date">Jun 2018 - Jul 2018</li>
               <li class="company uppercase">
                 <a>
-                  Google Inc. Dublin.
+                  NASSCOM
                 </a>
               </li>
-              <li class="position">UI/UX Designer</li>
+              <li class="position">Intern's</li>
+            </ul>
+
+            <ul class="">
+              <li class="date">Nov 2017 - May 2018</li>
+              <li class="company uppercase">
+                <a>
+                  Vishnumist Research and Development
+                </a>
+              </li>
+              <li class="position">Web Developer</li>
             </ul>
           </div>
           <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
@@ -282,7 +292,7 @@
     </div>
 
     <div class="col-md-8 col-sm-12 col-xs-12 padding-zero">
-      <div style="text-align: center; padding:45px 0px 45px 0px">
+      <div style="text-align: center; padding:22px 0px 45px 0px">
         <h1 style="font-size: 22px; font-weight: 600; color: #fff">PROFESSIONAL SKILLS</h1>
       </div>
 
