personal background color chnage

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </div>
 
   <!-- personal Info -->
-  <div class="container padding-zero" style="background: #efefef;">
+  <div class="container padding-zero" style="background: #ffffff;">
     <div class="col-md-8 col-sm-12 col-xs-12 padding-zero ">
       <h1 class="fadeInLeft" style="padding-left: 24px; padding-top: 20px;">About ME</h1>
       <p style="font-family: Georgia, Bitstream Charter,serif; font-style: italic; font-size: 19px; font-weight:
