--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a href="https://www.linkedin.com/in/nitish-1610908/"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="https://www.instagram.com/nitish_sharma_sharma/"><i class="fa fa-instagram"></i></a></li>
           <li><a href="https://twitter.com/nitish_sharma_s"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+          <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
 
         </ul>
       </div>
@@ -181,7 +181,7 @@
     <div class="col-md-8 col-sm-12 col-xs-12 padding-zero ">
       <h1 class="fadeInLeft" style="padding-left: 24px; padding-top: 20px;">About ME</h1>
       <p style="font-family: Georgia, Bitstream Charter,serif; font-style: italic; font-size: 19px; font-weight:
-        normal; margin: 0 3em 1.25em 3em; border-left: 5px solid #999; padding-left: 1em; line-height: 1.6em; ">
+        normal; margin: 0 3em 1.25em 3em; border-left: 5px solid #3498db; padding-left: 1em; line-height: 1.6em; ">
         I'm humble, Hard working and I like to challenge my self on regular basis.</br> I have done many projects and
         have good knowledge of ReactJs and React Native. I'm fast learner, Time-Saver and willing to learn new
         skills.</br>
@@ -561,7 +561,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12 padding-zero">
       <div class="copyright">
         <p>&copy;
-          <script>document.write(new Date().getFullYear());</script> Nitish Sharma</p>
+          <script>document.write(new Date().getFullYear()); window.location.hostname</script> </p>
       </div>
     </div>
 
