--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     <div class="col-md-12 col-sm-12 col-xs-12 padding-zero">
       <div class="copyright">
         <p>&copy;
-          <script>document.write(new Date().getFullYear()); window.location.hostname</script> </p>
+          <script>document.write(new Date().getFullYear() +window.location.hostname);</script> </p>
       </div>
     </div>
 
