--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Personal Info @NitishSharma</title>
 
-  <!-- Bootstrap -->
-
-  <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+
   <!-- style.css -->
   <link href="css/responsive.css" rel="stylesheet">
+
   <!-- headline clip -->
   <link href="css/progress.css" rel="stylesheet">
+
   <!-- animation css -->
   <!-- <link href="css/animation.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
-  <!-- <link rel="stylesheet" href="plugin/animated-headline/css/reset.css"> CSS reset -->
-  <link rel="stylesheet" href="plugin/animated-headline/css/style.css"> <!-- Resource style -->
-  <script src="plugin/animated-headline/js/modernizr.js"></script> <!-- Modernizr -->
+  <link rel="stylesheet" href="plugin/animated-headline/css/style.css">
+
+  <!-- Modernizr -->
+  <script src="plugin/animated-headline/js/modernizr.js"></script>
 
   <!-- Font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 
 <body>
   <!-- facebook  share-->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0&appId=1737532859858251&autoLogAppEvents=1"></script>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0&appId=1737532859858251&autoLogAppEvents=1"></script>
 
   <div class="container padding-zero first-container-bg">
     <!-- <h1 style="background-color: aqua;">container</h1> -->
@@ -63,9 +59,9 @@
 
       <div class="conatiner padding-zero" style="padding: 9px;">
         <iframe
-        src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fnitish-sharma.in%2F&width=450&layout=standard&action=like&size=small&share=true&height=35&appId=1737532859858251"
-          width="100%" height="35" style="border:none;overflow:hidden;padding-left: 20px; padding-top: 5px;color: #ffffff; "
-          scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+          src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fnitish-sharma.in%2F&width=450&layout=standard&action=like&size=small&share=true&height=35&appId=1737532859858251"
+          class="faceBookstyle" allow="encrypted-media">
+        </iframe>
 
       </div>
 
@@ -78,19 +74,37 @@
             <h1 class="font-accident-two-extralight">Nitish Sharma </h1>
             <ul class="personal-contact">
               <li class="col-md-6 col-sm-6 col-xs-12 padding-zero">
-                <span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                  width="20" height="20"
-                  viewBox="0 0 172 172"
-                  style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M134.2675,161.68c-0.05375,0 -0.1075,0 -0.16125,0c-25.85375,-0.84656 -56.14187,-25.9075 -77.01031,-46.78937c-20.89531,-20.88188 -45.95625,-51.18344 -46.7625,-76.91625c-0.29562,-9.03 21.86281,-25.08781 22.09125,-25.24906c5.75125,-4.00438 12.13406,-2.58 14.75438,1.04812c1.77375,2.45906 18.57062,27.90969 20.39812,30.79875c1.89469,2.99656 1.6125,7.45781 -0.7525,11.9325c-1.30344,2.48594 -5.63031,10.09156 -7.65937,13.63906c2.19031,3.1175 7.98187,10.76344 19.94125,22.72281c11.97281,11.95937 19.60531,17.76437 22.73625,19.95469c3.5475,-2.02906 11.15312,-6.35594 13.63906,-7.65937c4.4075,-2.33813 8.84187,-2.63375 11.86531,-0.77938c3.09063,1.89469 28.47406,18.77219 30.81219,20.39813c1.96187,1.38406 3.225,3.74906 3.48031,6.50375c0.24188,2.78156 -0.61812,5.72437 -2.40531,8.29094c-0.14781,0.215 -16.0175,22.10469 -24.96688,22.10469z"></path></g></g></svg>
+                <span><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20"
+                    viewBox="0 0 172 172" style=" fill:#000000;">
+                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                      font-family="none" font-size="none" text-anchor="end" style="mix-blend-mode: normal">
+                      <path d="M0,172v-172h172v172z" fill="none"></path>
+                      <g fill="#ffffff">
+                        <path
+                          d="M134.2675,161.68c-0.05375,0 -0.1075,0 -0.16125,0c-25.85375,-0.84656 -56.14187,-25.9075 -77.01031,-46.78937c-20.89531,-20.88188 -45.95625,-51.18344 -46.7625,-76.91625c-0.29562,-9.03 21.86281,-25.08781 22.09125,-25.24906c5.75125,-4.00438 12.13406,-2.58 14.75438,1.04812c1.77375,2.45906 18.57062,27.90969 20.39812,30.79875c1.89469,2.99656 1.6125,7.45781 -0.7525,11.9325c-1.30344,2.48594 -5.63031,10.09156 -7.65937,13.63906c2.19031,3.1175 7.98187,10.76344 19.94125,22.72281c11.97281,11.95937 19.60531,17.76437 22.73625,19.95469c3.5475,-2.02906 11.15312,-6.35594 13.63906,-7.65937c4.4075,-2.33813 8.84187,-2.63375 11.86531,-0.77938c3.09063,1.89469 28.47406,18.77219 30.81219,20.39813c1.96187,1.38406 3.225,3.74906 3.48031,6.50375c0.24188,2.78156 -0.61812,5.72437 -2.40531,8.29094c-0.14781,0.215 -16.0175,22.10469 -24.96688,22.10469z">
+                        </path>
+                      </g>
+                    </g>
+                  </svg>
                   +91 8882065182, +91 8700023215</span>
               </li>
 
               <li class="col-md-6 col-sm-6 col-xs-12 padding-zero">
                 <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-                  width="20" height="20"
-                  viewBox="0 0 172 172"
-                  style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M28.66667,28.66667c-7.91917,0 -14.33333,6.41417 -14.33333,14.33333v86c0,7.91917 6.41417,14.33333 14.33333,14.33333h114.66667c7.91917,0 14.33333,-6.41417 14.33333,-14.33333v-86c0,-7.91917 -6.41417,-14.33333 -14.33333,-14.33333zM28.66667,43h114.66667v7.18066l-57.33333,35.81934l-57.33333,-35.81934zM28.66667,64.514l57.33333,35.81934l57.33333,-35.81934v64.486h-114.66667z"></path></g></g></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 172 172"
+                    style=" fill:#000000;">
+                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                      font-family="none" font-size="none" text-anchor="end" style="mix-blend-mode: normal">
+                      <path d="M0,172v-172h172v172z" fill="none"></path>
+                      <g fill="#ffffff">
+                        <path
+                          d="M28.66667,28.66667c-7.91917,0 -14.33333,6.41417 -14.33333,14.33333v86c0,7.91917 6.41417,14.33333 14.33333,14.33333h114.66667c7.91917,0 14.33333,-6.41417 14.33333,-14.33333v-86c0,-7.91917 -6.41417,-14.33333 -14.33333,-14.33333zM28.66667,43h114.66667v7.18066l-57.33333,35.81934l-57.33333,-35.81934zM28.66667,64.514l57.33333,35.81934l57.33333,-35.81934v64.486h-114.66667z">
+                        </path>
+                      </g>
+                    </g>
+                  </svg>
                   nsniteshsharma47@gmail.com</span>
               </li>
 
@@ -142,31 +156,33 @@
           <ul class="padding-zero ui-menu-color06" style="list-style: none;">
             <li class="col-md-2 col-sm-4 col-xs-4  padding-zero menuitem ui-menu-color01">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/home.png" /><span>home</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/home.png" alt="Home" /><span>Home</span></a>
             </li>
 
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color02">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/student-male.png" /><span>Resume</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/student-male.png"
+                  alt="Resume" /><span>Resume</span></a>
             </li>
 
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color03">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/briefcase.png" /><span>project</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/briefcase.png" alt="Project" /><span>Project</span></a>
             </li>
 
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color04">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/block-microphone.png" /><span>Comming..</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/block-microphone.png"
+                  alt="Comming" /><span>Comming..</span></a>
             </li>
 
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color05">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/gallery.png" /><span>Gallery</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/gallery.png" alt="Gallery" /><span>Gallery</span></a>
             </li>
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color06">
               <a href="index.html" class="hvr-sweep-to-bottom">
-                <img src="https://img.icons8.com/wired/26/000000/marker.png" /><span>contact</span></a>
+                <img src="https://img.icons8.com/wired/26/000000/marker.png" alt="Contact" /><span>Contact</span></a>
             </li>
           </ul>
         </div>
@@ -182,9 +198,9 @@
       <h1 class="fadeInLeft" style="padding-left: 24px; padding-top: 20px;">About ME</h1>
       <p style="font-family: Georgia, Bitstream Charter,serif; font-style: italic; font-size: 19px; font-weight:
         normal; margin: 0 3em 1.25em 3em; border-left: 5px solid #3498db; padding-left: 1em; line-height: 1.6em; ">
-        I'm humble, Hard working and I like to challenge my self on regular basis.</br> I have done many projects and
+        I'm humble, Hard working and I like to challenge my self on regular basis.<br /> I have done many projects and
         have good knowledge of ReactJs and React Native. I'm fast learner, Time-Saver and willing to learn new
-        skills.</br>
+        skills.<br />
         I'm able to work efficient in busy Environment as well as Team. which makes me good player.
       </p>
     </div>
@@ -194,7 +210,7 @@
         <div style="padding-top: 7px; padding-bottom: 0px;">
           <h1>Personal Information</h1>
         </div>
-        <div style="padding: 20px; padding: bottom 0px;">
+        <div style="padding: 20px;">
           <div class="fullwidth box">
             <div class="one">
               <p class="uppercase">Name:</p>
@@ -305,11 +321,7 @@
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <!-- <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol> -->
+
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner shadow-home" role="listbox">
@@ -480,16 +492,6 @@
 
 
           </div>
-
-          <!-- Controls -->
-          <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a> -->
         </div>
 
       </div>
@@ -501,67 +503,12 @@
   <!-- Footer -->
 
   <div class="container footer-background-img padding-zero">
-
-
-    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
-      <h1 class="footer-heading">CONTACT US</h1>
-      <div class="follow">
-        <h2>Email <i class="fa fa-chevron-down arrow-padding" aria-hidden="true"></i></h2>
-        <h5 class="conatct-paragragh">nsniteshsharma47@gmail.com</h5>
-
-        <h2>Phone No. <i class="fa fa-chevron-down arrow-padding" aria-hidden="true"></i></h2>
-        <h5 class="conatct-paragragh">+91 8882065182</h5>
-
-        <h2>Address <i class="fa fa-chevron-down arrow-padding" aria-hidden="true"></i></h2>
-        <h5 class="conatct-paragragh">
-          230/04 Indira Colony Sahibabad, Ghaziabad, Uttar Pradesh, India 201005</h5>
-
-
-      </div>
-    </div> -->
-
-    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
-      <h1 class="footer-heading">INTERESTS</h1>
-      <div class="follow interest">
-        <ul>
-          <li>
-            <p>Food</p>
-          </li>
-          <li>
-            <p>Song</p>
-          </li>
-          <li>
-            <p>Socail Service</p>
-          </li>
-        </ul>
-      </div>
-    </div> -->
-
-    <!-- <div class="col-md-4 col-sm-6 col-xs-12 padding-zero">
-
-      <h1 class="footer-heading">FOLLOW ME</h1>
-      <div class="follow">
-        <ul class="list-inline social">
-          <li><a target="_blank" href="https://www.facebook.com/GmailKing"><i class="fa fa-facebook facebook-color"></i></a>
-          </li>
-          <li><a target="_blank" href="https://twitter.com/nitish_sharma_s"><i class="fa fa-twitter twitter-color"></i></a>
-          </li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/nitish-1610908/"><i class="fa fa-linkedin linkedin-color"></i></a>
-          </li>
-          <li><a target="_blank" href="https://www.instagram.com/nitish_sharma_sharma/"><i class="fa fa-instagram instagram-color"></i></a>
-          </li>
-          <li><a target="_blank" href="#"><i class="fa fa-google google-color"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div> -->
-
-
     <!-- term -->
     <div class="col-md-12 col-sm-12 col-xs-12 padding-zero">
       <div class="copyright">
         <p>&copy;
-          <script>document.write(new Date().getFullYear() + " " + window.location.hostname);</script> </p>
+          <script>document.write(new Date().getFullYear() + " " + window.location.hostname);</script>
+        </p>
       </div>
     </div>
 
@@ -574,9 +521,10 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
     crossorigin="anonymous"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <!-- Resource jQuery -->
   <script src="js/bootstrap.min.js"></script>
-  <script src="plugin/animated-headline/js/main.js"></script> <!-- Resource jQuery -->
+
+  <script src="plugin/animated-headline/js/main.js"></script>
 
 </body>
 
