--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             </div>
 
             <!-- item-2.2 -->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-4 col-sm-4 col-xs-12 progress-item">
               <div class="progress yellow">
                 <span class="progress-left">
                   <span class="progress-bar"></span>
@@ -486,7 +486,7 @@
             </div>
 
             <!-- item-2.3 -->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-4 col-sm-4 col-xs-12 progress-item">
               <div class="progress yellow">
                 <span class="progress-left">
                   <span class="progress-bar"></span>
