--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <li class="position">Web Developer</li>
             </ul>
           </div>
-          <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
+          <a href="#" class="btn btn-wh-trans btn-xs">Learn More</a>
 
         </div>
       </div>
