dark mode label color chnaged

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="slider round"></div>
             </label>
             <!-- <em en>Dark Mode</em> -->
-            <label class="custom-control-label" for="darkSwitch" style="padding-left:10px">Dark Mode</label>
+            <label class="custom-control-label darkmodeText" for="darkSwitch">Dark Mode</label>
             <p id="demo"></p>
           </div>
         </div>
