added professional skil

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </li>
 
             <li class="col-md-2 col-sm-4 col-xs-4 padding-zero menuitem ui-menu-color02">
-              <a href="index.html" class="hvr-sweep-to-bottom">
+              <a href="resume.html" class="hvr-sweep-to-bottom">
                 <i class="fa fa-graduation-cap fontSize26 " aria-hidden="true"></i>
                 <span>Resume</span></a>
             </li>
@@ -280,7 +280,7 @@
 
   <!-- Progress -->
 
-  <div class="container padding-zero" style="background: #3498db;">
+  <div class="container padding-zero employment_bg">
     <div class="col-md-4 col-sm-12 col-xs-12 padding-zero">
       <div class="experience-card">
         <div class="experience-card-title">
@@ -350,27 +350,28 @@
           <div class="item active">
             <!-- item-1.1 -->
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <div class="progress yellow">
+              <div class="progress blue">
                 <span class="progress-left">
                   <span class="progress-bar"></span>
                 </span>
                 <span class="progress-right">
                   <span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">75%</div>
+                <div class="progress-value">90%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                     font-weight: 700 !important;
-                    padding-bottom: 8px;
-                    font-size: 16px;">Progress 1</h2>
+                    /* padding-bottom: 8px; */
+                    font-size: 22px;">ReactJs</h2>
                 <p style="line-height: 1.4em;
                     font-weight: 400;
                     font-style: normal !important;
-                    color: #ffff;">A prototype is an early sample, model,
-                  or release of a product built to test ...</p>
+                    color: #ffff;">Respond is an explanatory, proficient, and adaptable JavaScript library for building
+                  UIs. It lets you make complex UIs from little and separated bits of code called ...</p>
                 <div style="padding: 15px 0px 15px 0px;">
-                  <a href="" class="btn btn-default btn-xs">Read More</a>
+                  <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank"
+                    class="btn btn-default btn-xs">Read More</a>
                 </div>
               </div>
             </div>
@@ -384,13 +385,13 @@
                 <span class="progress-right">
                   <span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">75%</div>
+                <div class="progress-value">95%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                       font-weight: 700 !important;
-                      padding-bottom: 8px;
-                      font-size: 16px;">Progress 1</h2>
+                      /* padding-bottom: 8px; */
+                      font-size: 22px;">React Native</h2>
                 <p style="line-height: 1.4em;
                       font-weight: 400;
                       font-style: normal !important;
@@ -404,7 +405,7 @@
 
             <!-- item-1.3 -->
             <div class="col-md-4 col-sm-4 col-xs-12 progress-item">
-              <div class="progress yellow">
+              <div class="progress pink">
                 <span class="progress-left">
                   <span class="progress-bar"></span>
                 </span>
@@ -413,11 +414,11 @@
                 </span>
                 <div class="progress-value">75%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                       font-weight: 700 !important;
-                      padding-bottom: 8px;
-                      font-size: 16px;">Progress 1</h2>
+                      /* padding-bottom: 8px; */
+                      font-size: 22px;">Laravel</h2>
                 <p style="line-height: 1.4em;
                       font-weight: 400;
                       font-style: normal !important;
@@ -442,11 +443,11 @@
                 </span>
                 <div class="progress-value">75%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                       font-weight: 700 !important;
-                      padding-bottom: 8px;
-                      font-size: 16px;">Progress 1</h2>
+                      /* padding-bottom: 8px; */
+                      font-size: 22px;">Progress 1</h2>
                 <p style="line-height: 1.4em;
                       font-weight: 400;
                       font-style: normal !important;
@@ -469,11 +470,11 @@
                 </span>
                 <div class="progress-value">75%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                         font-weight: 700 !important;
-                        padding-bottom: 8px;
-                        font-size: 16px;">Progress 1</h2>
+                        /* padding-bottom: 8px; */
+                        font-size: 22px;">Progress 1</h2>
                 <p style="line-height: 1.4em;
                         font-weight: 400;
                         font-style: normal !important;
@@ -496,11 +497,11 @@
                 </span>
                 <div class="progress-value">75%</div>
               </div>
-              <div style="text-align: center; color: white; padding: 25px 0px 25px 0px;">
+              <div style="text-align: center; color: white; padding: 0px 0px 25px 0px;">
                 <h2 style="
                         font-weight: 700 !important;
-                        padding-bottom: 8px;
-                        font-size: 16px;">Progress 1</h2>
+                        /* padding-bottom: 8px; */
+                        font-size: 22px;">Progress 1</h2>
                 <p style="line-height: 1.4em;
                         font-weight: 400;
                         font-style: normal !important;
