--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,7 @@
     <!-- headline clip -->
     <link href="css/progress.css" rel="stylesheet">
     <link href="css/darkMode.css" rel="stylesheet">
+    <link href="css/timeline.css" rel="stylesheet">
 
     <!-- animation css -->
     <!-- <link href="css/animation.css" rel="stylesheet"> -->
@@ -231,11 +232,119 @@
                 I'm able to work efficient in busy Environment as well as Team. which makes me good player.
             </p>
         </div>
-
-       
     </div>
 
-   
+    <!-- timeline -->
+    <div class="container">
+        <h3 class="card-title">Timeline Style : Demo-2</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="main-timeline2">
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <span class="year">2018</span>
+                            <div class="inner-content">
+                                <h3 class="title">Web Designer</h3>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
+                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <span class="year">2017</span>
+                            <div class="inner-content">
+                                <h3 class="title">Web Developer</h3>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
+                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <span class="year">2016</span>
+                            <div class="inner-content">
+                                <h3 class="title">Web Designer</h3>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
+                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <span class="year">2015</span>
+                            <div class="inner-content">
+                                <h3 class="title">Web Developer</h3>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
+                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Eductions -->
+    <div class="container">
+        <h3 class="card-title">Timeline Style : Demo-3</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="main-timeline3">
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2018</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Desginer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
+                                luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2017</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Developer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
+                                luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2016</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Desginer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
+                                luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2015</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Developer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
+                                luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Footer -->
 
     <div class="container footer-background-img padding-zero">
