--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,8 @@
     <!-- animation css -->
     <!-- <link href="css/animation.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="plugin/animated-headline/css/style.css">
 
 
@@ -235,11 +236,12 @@
     </div>
 
     <!-- timeline -->
-    <div class="container">
-        <h3 class="card-title">Timeline Style : Demo-2</h3>
+    <div class="container background-white Divider">
+        <h1 class="card-title-small   d-sm-block d-md-none">EXPERIENCE</h1>
+        <h1 class="card-title hidden-lg-down" data-content="EXPERIENCE"></h1>
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline2">
+                <div class="experience-timeline">
                     <div class="timeline">
                         <a href="#" class="timeline-content">
                             <span class="year">2018</span>
@@ -294,11 +296,12 @@
     </div>
 
     <!-- Eductions -->
-    <div class="container">
-        <h3 class="card-title">Timeline Style : Demo-3</h3>
+    <div class="container background-white Divider">
+        <h1 class="card-title-small   d-sm-block d-md-none">EXPERIENCE</h1>
+        <h1 class="card-title hidden-sm-down" data-content="EXPERIENCE"></h1>
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline3">
+                <div class="main-education-timeline">
                     <div class="timeline">
                         <div class="timeline-icon"><span class="year">2018</span></div>
                         <div class="timeline-content">
