--- a/resume.html
+++ b/resume.html
@@ -246,10 +246,11 @@
                         <a href="#" class="timeline-content">
                             <span class="year">2018</span>
                             <div class="inner-content">
-                                <h3 class="title">Web Designer</h3>
+                                <h3 class="title">GTB Polytechnic Institute</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
-                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                    As a Role of wed Developer & Designer with Hosting
+                                    and Domain Services
+                                                                                                                      
                                 </p>
                             </div>
                         </a>
@@ -258,10 +259,10 @@
                         <a href="#" class="timeline-content">
                             <span class="year">2017</span>
                             <div class="inner-content">
-                                <h3 class="title">Web Developer</h3>
+                                <h3 class="title">Vishnumist R & D</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
-                                    amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
+                                    As a Role of wed Developer & Designer with Hosting
+                                    and Domain Services
                                 </p>
                             </div>
                         </a>
@@ -270,7 +271,7 @@
                         <a href="#" class="timeline-content">
                             <span class="year">2016</span>
                             <div class="inner-content">
-                                <h3 class="title">Web Designer</h3>
+                                <h3 class="title">ARICENT-NASSCOM</h3>
                                 <p class="description">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
                                     amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
@@ -282,7 +283,7 @@
                         <a href="#" class="timeline-content">
                             <span class="year">2015</span>
                             <div class="inner-content">
-                                <h3 class="title">Web Developer</h3>
+                                <h3 class="title">CHANDAN SHARMA</h3>
                                 <p class="description">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ex odio, rhoncus sit
                                     amet tincidunt eu, suscipit a orci. In suscipit quam eget dui auctor.
@@ -297,45 +298,45 @@
 
     <!-- Eductions -->
     <div class="container background-white Divider">
-        <h1 class="card-title-small   d-sm-block d-md-none">EXPERIENCE</h1>
-        <h1 class="card-title hidden-sm-down" data-content="EXPERIENCE"></h1>
+        <h1 class="card-title-small   d-sm-block d-md-none">EDUCATION</h1>
+        <h1 class="card-title hidden-sm-down" data-content="EDUCATION"></h1>
         <div class="row">
             <div class="col-md-12">
                 <div class="main-education-timeline">
                     <div class="timeline">
-                        <div class="timeline-icon"><span class="year">2018</span></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Desginer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
-                                luctus nunc ut, commodo enim. Vivamus sem erat.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline">
-                        <div class="timeline-icon"><span class="year">2017</span></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
-                                luctus nunc ut, commodo enim. Vivamus sem erat.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline">
                         <div class="timeline-icon"><span class="year">2016</span></div>
                         <div class="timeline-content">
-                            <h3 class="title">Web Desginer</h3>
+                            <h3 class="title">Bachelors in computer science & Engineering </h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
-                                luctus nunc ut, commodo enim. Vivamus sem erat.
+                                KITE Groups of Institutions with Aggregate 61%
+                                Form Dr.A.P.J Abdul kalam Technical University
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2013</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Diploma in computer science & Engineering</h3>
+                            <p class="description">
+                                GTB Polytechnic Institute, New Delhi. with 68.9%
+                                Form Board of Technical Eductions, Delhi
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2010</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Matricutions</h3>
+                            <p class="description">
+                                Govt Boys Secondary School, Delhi with 8.2 (CGPA)
+                                Form Central Borad of Secondary Eductions, New Dilhi
                             </p>
                         </div>
                     </div>
                     <div class="timeline">
                         <div class="timeline-icon"><span class="year">2015</span></div>
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
+                            <h3 class="title">CHANDAN SHARMA</h3>
                             <p class="description">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices,
                                 luctus nunc ut, commodo enim. Vivamus sem erat.
