--- a/resume.html
+++ b/resume.html
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                     <div class="timeline">
-                        <div class="timeline-icon"><span class="year">2010</span></div>
+                        <div class="timeline-icon"><span class="year">2012</span></div>
                         <div class="timeline-content">
                             <h3 class="title">Matricutions</h3>
                             <p class="description">
@@ -333,7 +333,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="timeline">
+                    <!-- <div class="timeline">
                         <div class="timeline-icon"><span class="year">2015</span></div>
                         <div class="timeline-content">
                             <h3 class="title">CHANDAN SHARMA</h3>
@@ -342,7 +342,7 @@
                                 luctus nunc ut, commodo enim. Vivamus sem erat.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
