--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
     <link href="css/progress.css" rel="stylesheet">
     <link href="css/darkMode.css" rel="stylesheet">
     <link href="css/timeline.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
     <!-- animation css -->
     <!-- <link href="css/animation.css" rel="stylesheet"> -->
@@ -243,17 +244,28 @@
             <div class="col-md-12">
                 <div class="experience-timeline">
                     <div class="timeline">
-                        <a href="#" class="timeline-content">
+                        <div href="#" class="timeline-content">
                             <span class="year">2018</span>
                             <div class="inner-content">
                                 <h3 class="title">GTB Polytechnic Institute</h3>
-                                <p class="description">
+                                <span><a href="/index.html">home</a></span>
+                                <ul class="project-desc">
+                                    <li><a href="/index.html">home</a></li>
+                                    <li>
+                                        <p class="description">
+                                            As a Role of wed Developer & Designer with Hosting
+                                            and Domain Services
+
+                                        </p>
+                                    </li>
+                                </ul>
+                                <!-- <p class="description">
                                     As a Role of wed Developer & Designer with Hosting
                                     and Domain Services
-                                                                                                                      
-                                </p>
+
+                                </p> -->
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="timeline">
                         <a href="#" class="timeline-content">
