--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <h2 style="
                       font-weight: 700 !important;
                       /* padding-bottom: 8px; */
-                      font-size: 22px;">Progress 1</h2>
+                      font-size: 22px;">Ant Design</h2>
                 <p style="line-height: 1.4em;
                       font-weight: 400;
                       font-style: normal !important;
@@ -474,7 +474,7 @@
                 <h2 style="
                         font-weight: 700 !important;
                         /* padding-bottom: 8px; */
-                        font-size: 22px;">Progress 1</h2>
+                        font-size: 22px;">Bootstrap</h2>
                 <p style="line-height: 1.4em;
                         font-weight: 400;
                         font-style: normal !important;
@@ -501,7 +501,7 @@
                 <h2 style="
                         font-weight: 700 !important;
                         /* padding-bottom: 8px; */
-                        font-size: 22px;">Progress 1</h2>
+                        font-size: 22px;">WordPress</h2>
                 <p style="line-height: 1.4em;
                         font-weight: 400;
                         font-style: normal !important;
