education desc delete

--- a/resume.html
+++ b/resume.html
@@ -478,7 +478,7 @@
                             </h3>
                             <p class="postion-style"><b>Training</b></p>
 
-                            <ol start="1" class="position-description">
+                            <ul start="1" class="position-description">
                                 <li>
                                     <p>
                                         Cras sit amet nibh libero, in gravida nulla. Nulla vel
@@ -497,7 +497,7 @@
                                         Donec lacinia congue felis in faucibus.
                                     </p>
                                 </li>
-                            </ol>
+                            </ul>
 
                         </div>
                         <dl class="dl-horizontal">
@@ -773,7 +773,7 @@
                                 > Bachelor of Technology, Computer Science & Engineering, 64.4%
                                 </b>
                             </p>
-                            <ul>
+                           <!--  <ul>
                                 <li>Participated in INNOTECH 2k16 and 2k17 ( INNOTECH is an open technical fest ).
                                     organized ethical hacking competition in INNOTECH 2k17. and learned the
                                     responsibilities and role of the volunteers.
@@ -810,7 +810,7 @@
 
                                     </ul>
                                 </li>
-                            </ul>
+                            </ul> -->
 
                         </div>
                     </div>
@@ -838,7 +838,7 @@
                             <p class="postion-style">
                                 <b>Polytechnic (Diploma), Computer Science & Engineering, 68.9%</b>
                             </p>
-                            <ul>
+                           <!--  <ul>
                                 <li>Development and deployment of our college website during the final year of our
                                     course with the team. And the college provided a certificate of appreciation and
                                     helped in self-learning.
@@ -853,7 +853,7 @@
                                     <dd>2</dd>
                                 </dl>
 
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
 
@@ -879,12 +879,12 @@
                             >
                             </h3>
                             <p class="postion-style"><b>Matriculation, 8.2 (CGPA), 77.9%</b></p>
-                            <ul>
+                           <!--  <ul>
                                 <li>Secured 2nd position in the CBSE board examination at school.</li>
                                 <li>Learn how to start a conversation with an unknown person and learn many social facts
                                     like social activities, culture, etc.
                                 </li>
-                            </ul>
+                            </ul> -->
                             <!--                  <p>-->
                             <!--                    -->
                             <!--                  </p>-->
